検索・ジャンプ時のカーソル移動ロジックの改良

--- a/win32/mainwnd.rc
+++ b/win32/mainwnd.rc
@@ -113,7 +113,7 @@ STYLE DS_MODALFRAME | DS_SETFOREGROUND | DS_CENTER | WS_POPUP | WS_VISIBLE |
     WS_CAPTION
 EXSTYLE WS_EX_CONTROLPARENT
 CAPTION "指定アドレスへジャンプ"
-FONT 9, "ＭＳ Ｐゴシック"
+FONT 9, "ＭＳ Ｐゴシック", 0, 0, 0x1
 BEGIN
     EDITTEXT        IDC_JUMPADDRESS,76,10,104,14,ES_AUTOHSCROLL
     DEFPUSHBUTTON   "OK",IDOK,76,50,50,14
@@ -124,7 +124,8 @@ BEGIN
 END
 
 IDD_SEARCH DIALOG DISCARDABLE  0, 0, 193, 85
-STYLE DS_MODALFRAME | DS_SETFOREGROUND | WS_POPUP | WS_VISIBLE | WS_CAPTION
+STYLE DS_MODALFRAME | DS_SETFOREGROUND | DS_CENTER | WS_POPUP | WS_VISIBLE | 
+    WS_CAPTION
 CAPTION "検索"
 FONT 9, "ＭＳ Ｐゴシック"
 BEGIN
