--- a/win32/mainwnd.rc
+++ b/win32/mainwnd.rc
@@ -159,26 +159,26 @@ IDD_CONFIG_FONT DIALOG DISCARDABLE  0, 0, 240, 165
 STYLE DS_CONTROL | WS_CHILD
 FONT 9, "ＭＳ Ｐゴシック"
 BEGIN
-    COMBOBOX        IDC_CONFIG_FONT_NAME,7,18,106,141,CBS_DROPDOWNLIST | 
+    COMBOBOX        IDC_CONFIG_FONT_NAME,7,18,112,141,CBS_DROPDOWNLIST | 
+                    CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_CONFIG_FONT_SIZE,63,33,56,141,CBS_DROPDOWNLIST | 
                     WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_CONFIG_FONT_SIZE,63,33,50,141,CBS_DROPDOWNLIST | 
-                    WS_VSCROLL | WS_TABSTOP
-    CONTROL         "プロポーショナルフォント表示(&P)",
+    CONTROL         "プロポーショナルフォントも表示(&P)",
                     IDC_CONFIG_SHOW_PROPFONT,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,7,52,105,10
-    LISTBOX         IDC_PART_LIST,122,31,101,65,LBS_SORT | 
+                    WS_TABSTOP,7,52,112,10
+    LISTBOX         IDC_PART_LIST,126,31,101,65,LBS_SORT | 
                     LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     CONTROL         "太字にする(&H)",IDC_CONFIG_FONT_BOLD,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,122,104,105,10
-    PUSHBUTTON      "",IDC_CONFIG_FONT_FGCOLOR,163,119,50,14,BS_BITMAP | 
+                    BS_AUTOCHECKBOX | WS_TABSTOP,126,104,59,10
+    PUSHBUTTON      "",IDC_CONFIG_FONT_FGCOLOR,176,119,50,14,BS_BITMAP | 
                     BS_NOTIFY
-    PUSHBUTTON      "",IDC_CONFIG_FONT_BGCOLOR,163,138,50,14,BS_BITMAP | 
+    PUSHBUTTON      "",IDC_CONFIG_FONT_BGCOLOR,176,138,50,14,BS_BITMAP | 
                     BS_NOTIFY
-    GROUPBOX        "サンプル",IDC_SAMPLE_VIEW,7,71,105,87
-    GROUPBOX        "フォントの個別設定",IDC_STATIC,116,7,117,151
-    LTEXT           "前景色(&F)：",IDC_STATIC,122,122,35,8
-    LTEXT           "背景色(&B)：",IDC_STATIC,122,141,35,8
-    LTEXT           "フォント変更箇所(&C)：",IDC_STATIC,122,19,100,8
+    GROUPBOX        "サンプル",IDC_SAMPLE_VIEW,7,65,113,93
+    GROUPBOX        "フォントの個別設定",IDC_STATIC,122,7,111,151
+    LTEXT           "前景色(&F)：",IDC_STATIC,126,122,35,8
+    LTEXT           "背景色(&B)：",IDC_STATIC,126,141,35,8
+    LTEXT           "フォント変更箇所(&C)：",IDC_STATIC,126,19,100,8
     LTEXT           "フォント名(&N)：",IDC_STATIC,7,7,45,8
     LTEXT           "フォントサイズ(&S)：",IDC_STATIC,7,35,55,8
 END
@@ -187,14 +187,14 @@ IDD_CONFIG_CURSOR DIALOG DISCARDABLE  0, 0, 240, 165
 STYLE DS_CONTROL | WS_CHILD
 FONT 9, "ＭＳ Ｐゴシック"
 BEGIN
-    GROUPBOX        "キャレットの挙動",IDC_STATIC,7,7,125,62
-    CONTROL         "固定位置(&F)",IDC_CONFIG_CARET_STATIC,"Button",
-                    BS_AUTORADIOBUTTON,14,21,86,10
+    GROUPBOX        "スクロール時のキャレットの挙動",IDC_STATIC,7,7,125,57
+    CONTROL         "スクロールしない(&F)",IDC_CONFIG_CARET_STATIC,"Button",
+                    BS_AUTORADIOBUTTON,14,20,86,10
     CONTROL         "はみ出そうな場合はスクロール(&E)",
                     IDC_CONFIG_CARET_ENSURE_VISIBLE,"Button",
-                    BS_AUTORADIOBUTTON,14,37,113,10
+                    BS_AUTORADIOBUTTON,14,34,113,10
     CONTROL         "一緒にスクロール(&S)",IDC_CONFIG_CARET_SCROLL,"Button",
-                    BS_AUTORADIOBUTTON,14,54,113,10
+                    BS_AUTORADIOBUTTON,14,48,113,10
 END
 
 
