--- a/win32/mainwnd.rc
+++ b/win32/mainwnd.rc
@@ -170,14 +170,14 @@ BEGIN
                     LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     CONTROL         "太字にする(&H)",IDC_CONFIG_FONT_BOLD,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,7,51,59,10
-    PUSHBUTTON      "",IDC_CONFIG_FONT_FGCOLOR,210,109,16,16,BS_ICON | 
+    PUSHBUTTON      "",IDC_CONFIG_FONT_FGCOLOR,182,109,44,16,BS_BITMAP | 
                     BS_NOTIFY
-    PUSHBUTTON      "",IDC_CONFIG_FONT_BKCOLOR,210,130,16,16,BS_ICON | 
+    PUSHBUTTON      "",IDC_CONFIG_FONT_BKCOLOR,182,130,44,16,BS_BITMAP | 
                     BS_NOTIFY
     GROUPBOX        "サンプル",IDC_SAMPLE_VIEW,7,83,113,75
     GROUPBOX        "フォントの個別設定",IDC_STATIC,122,7,111,151
-    LTEXT           "フォントの色(&F)：",IDC_STATIC,126,113,74,8
-    LTEXT           "背景色(&B)：",IDC_STATIC,126,134,73,8
+    LTEXT           "フォントの色(&F)：",IDC_STATIC,126,113,51,8
+    LTEXT           "背景色(&B)：",IDC_STATIC,126,134,51,8
     LTEXT           "フォント変更箇所(&C)：",IDC_STATIC,126,19,100,8
     LTEXT           "フォント名(&N)：",IDC_STATIC,7,7,45,8
     LTEXT           "フォントサイズ(&S)：",IDC_STATIC,7,35,55,8
