--- a/win32/mainwnd.rc
+++ b/win32/mainwnd.rc
@@ -124,22 +124,21 @@ BEGIN
     LTEXT           "",IDC_JUMPINFO,45,31,135,12
 END
 
-IDD_SEARCH DIALOG DISCARDABLE  0, 0, 193, 85
-STYLE DS_MODALFRAME | DS_SETFOREGROUND | DS_CENTER | WS_POPUP | WS_VISIBLE | 
-    WS_CAPTION
-CAPTION "検索"
+IDD_SEARCH DIALOG DISCARDABLE  0, 0, 195, 85
+STYLE DS_CONTROL | WS_CHILD | WS_VISIBLE
 FONT 9, "ＭＳ Ｐゴシック"
 BEGIN
     LTEXT           "検索するデータ(&D)：",IDC_STATIC,7,11,59,8
-    EDITTEXT        IDC_SEARCHDATA,75,7,111,14,ES_AUTOHSCROLL
-    GROUPBOX        "データの種類(&T)",IDC_DATATYPE_G,7,25,179,30
+    EDITTEXT        IDC_SEARCHDATA,77,7,111,14,ES_AUTOHSCROLL
+    GROUPBOX        "データの種類(&T)",IDC_DATATYPE_G,7,25,68,52
     CONTROL         "１６進",IDC_DT_HEX,"Button",BS_AUTORADIOBUTTON | 
-                    BS_NOTIFY | WS_TABSTOP,45,37,31,10
+                    BS_NOTIFY | WS_TABSTOP,19,40,31,10
     CONTROL         "文字列",IDC_DT_STRING,"Button",BS_AUTORADIOBUTTON | 
-                    BS_NOTIFY | WS_TABSTOP,115,37,31,10
-    DEFPUSHBUTTON   "後方検索(&F)",IDC_SEARCH_FORWARD,7,64,50,14,WS_GROUP
-    PUSHBUTTON      "前方検索(&B)",IDC_SEARCH_BACKWARD,62,64,50,14
-    PUSHBUTTON      "閉じる",IDOK,136,64,50,14
+                    BS_NOTIFY | WS_TABSTOP,19,57,31,10
+    DEFPUSHBUTTON   "後方検索(&F)",IDC_SEARCH_FORWARD,79,29,50,14,WS_GROUP
+    PUSHBUTTON      "前方検索(&B)",IDC_SEARCH_BACKWARD,79,45,50,14
+    PUSHBUTTON      "閉じる",IDOK,138,29,50,14
+    PUSHBUTTON      "一括検索",IDC_GREP,79,62,109,14
 END
 
 IDD_CONFIG_MAIN DIALOG DISCARDABLE  0, 0, 259, 217
@@ -207,17 +206,22 @@ BEGIN
     CONTROL         109,IDC_STATIC,"Static",SS_BITMAP,141,29,73,85
 END
 
-IDD_SEARCH_RESULT DIALOGEX 0, 0, 223, 149
-STYLE DS_MODALFRAME | DS_3DLOOK | DS_CENTER | WS_POPUP | WS_VISIBLE | 
+IDD_SEARCH_MAIN DIALOG DISCARDABLE  0, 0, 210, 103
+STYLE DS_MODALFRAME | DS_SETFOREGROUND | DS_CENTER | WS_POPUP | WS_VISIBLE | 
     WS_CAPTION | WS_SYSMENU
-CAPTION "検索結果一覧"
+CAPTION "検索"
 FONT 9, "ＭＳ Ｐゴシック"
 BEGIN
-    DEFPUSHBUTTON   "ジャンプ",IDC_JUMP,166,7,50,14
-    PUSHBUTTON      "閉じる",IDC_CLOSE,166,24,50,14
-    CONTROL         "List1",IDC_SEARCH_RESULT_LVIEW,"SysListView32",
+END
+
+IDD_SEARCH_GREP DIALOGEX 0, 0, 195, 93
+STYLE DS_CONTROL | WS_CHILD
+FONT 9, "ＭＳ Ｐゴシック"
+BEGIN
+    PUSHBUTTON      "ジャンプ",IDC_JUMP,138,7,50,14,BS_NOTIFY
+    CONTROL         "List1",IDC_SEARCH_GREP_RESULT,"SysListView32",
                     LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | 
-                    LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,7,7,157,135,
+                    LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,7,7,129,79,
                     WS_EX_CLIENTEDGE
 END
 
@@ -241,7 +245,7 @@ BEGIN
     IDD_SEARCH, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 186
+        RIGHTMARGIN, 188
         TOPMARGIN, 7
         BOTTOMMARGIN, 78
     END
@@ -270,12 +274,20 @@ BEGIN
         BOTTOMMARGIN, 158
     END
 
-    IDD_SEARCH_RESULT, DIALOG
+    IDD_SEARCH_MAIN, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 216
+        RIGHTMARGIN, 203
         TOPMARGIN, 7
-        BOTTOMMARGIN, 142
+        BOTTOMMARGIN, 96
+    END
+
+    IDD_SEARCH_GREP, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 188
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 86
     END
 END
 #endif    // APSTUDIO_INVOKED
