検索ダイアログのレイアウト変更 ジャンプダイアログの機能拡張

--- a/win32/mainwnd.rc
+++ b/win32/mainwnd.rc
@@ -65,19 +65,19 @@ IDM_MAINMENU MENU DISCARDABLE
 BEGIN
     POPUP "ファイル(&F)"
     BEGIN
-        MENUITEM "ファイルを開く(&O)",          IDM_OPEN
+        MENUITEM "ファイルを開く(&O)...",       IDM_OPEN
         MENUITEM "ファイルを閉じる(&C)",        IDM_CLOSE
         MENUITEM SEPARATOR
         MENUITEM "終了(&Q)",                    IDM_QUIT
     END
-    POPUP "編集(&E)"
+    POPUP "検索(&S)"
     BEGIN
-        MENUITEM "検索(&S)",                    IDM_SEARCH
+        MENUITEM "検索(&S)...",                 IDM_SEARCH
         MENUITEM SEPARATOR
-        MENUITEM "指定アドレスにジャンプ(&J)",  IDM_JUMP
+        MENUITEM "指定アドレスにジャンプ(&J)...", IDM_JUMP
     END
     MENUITEM "設定(&C)",                    IDM_CONFIG
-    MENUITEM "ヘルプ(&H)",                  IDM_HELP
+    MENUITEM "ヘルプ(&H)",                  IDM_HELP, HELP
 END
 
 
@@ -88,6 +88,8 @@ END
 
 IDR_KEYACCEL ACCELERATORS DISCARDABLE 
 BEGIN
+    "F",            IDM_SEARCH,             VIRTKEY, CONTROL, NOINVERT
+    "V",            IDM_JUMP,               VIRTKEY, CONTROL, NOINVERT
     VK_DOWN,        IDK_LINEDOWN,           VIRTKEY, NOINVERT
     VK_END,         IDK_BOTTOM,             VIRTKEY, NOINVERT
     VK_HOME,        IDK_TOP,                VIRTKEY, NOINVERT
@@ -109,36 +111,41 @@ END
 // Dialog
 //
 
-IDD_JUMP DIALOGEX 0, 0, 187, 71
+IDD_JUMP DIALOGEX 0, 0, 187, 81
 STYLE DS_MODALFRAME | DS_SETFOREGROUND | DS_CENTER | WS_POPUP | WS_VISIBLE | 
-    WS_CAPTION
+    WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_CONTROLPARENT
 CAPTION "指定アドレスへジャンプ"
-FONT 9, "ＭＳ Ｐゴシック", 0, 0, 0x1
+FONT 9, "ＭＳ Ｐゴシック"
 BEGIN
-    EDITTEXT        IDC_JUMPADDRESS,76,10,104,14,ES_AUTOHSCROLL
-    DEFPUSHBUTTON   "OK",IDOK,76,50,50,14
-    PUSHBUTTON      "ｷｬﾝｾﾙ",IDCANCEL,130,50,50,14
-    LTEXT           "ジャンプ先アドレス(&A)：",IDC_STATIC,7,13,67,8
-    LTEXT           "有効範囲：",IDC_STATIC,7,31,34,12
-    LTEXT           "",IDC_JUMPINFO,45,31,135,12
+    LTEXT           "有効範囲：",IDC_STATIC,7,7,34,12
+    LTEXT           "",IDC_JUMPINFO,45,7,135,12
+    LTEXT           "ジャンプ先アドレス(&A)：",IDC_STATIC,7,26,67,8
+    EDITTEXT        IDC_JUMPADDRESS,76,23,104,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_BLOCKSIZE,7,41,58,14,ES_AUTOHSCROLL
+    LTEXT           "×",IDC_STATIC,69,44,8,8
+    EDITTEXT        IDC_BLOCKCOUNT,79,41,48,14,ES_AUTOHSCROLL
+    LTEXT           "＝",IDC_STATIC,130,44,8,8
+    PUSHBUTTON      "▲代入",IDC_CALC_SIZE,140,41,40,14,BS_NOTIFY
+    DEFPUSHBUTTON   "OK",IDOK,76,60,50,14
+    PUSHBUTTON      "ｷｬﾝｾﾙ",IDCANCEL,130,60,50,14
 END
 
-IDD_SEARCH DIALOG DISCARDABLE  0, 0, 195, 85
+IDD_SEARCH DIALOG DISCARDABLE  0, 0, 231, 72
 STYLE DS_CONTROL | WS_CHILD | WS_VISIBLE
 FONT 9, "ＭＳ Ｐゴシック"
 BEGIN
     LTEXT           "検索するデータ(&D)：",IDC_STATIC,7,11,59,8
-    EDITTEXT        IDC_SEARCHDATA,77,7,111,14,ES_AUTOHSCROLL
-    GROUPBOX        "データの種類(&T)",IDC_DATATYPE_G,7,25,68,52
+    EDITTEXT        IDC_SEARCHDATA,70,7,154,14,ES_AUTOHSCROLL
+    GROUPBOX        "データの種類(&T)",IDC_DATATYPE_G,7,25,60,40
     CONTROL         "１６進",IDC_DT_HEX,"Button",BS_AUTORADIOBUTTON | 
-                    BS_NOTIFY | WS_TABSTOP,19,40,31,10
+                    BS_NOTIFY | WS_TABSTOP,13,37,31,10
     CONTROL         "文字列",IDC_DT_STRING,"Button",BS_AUTORADIOBUTTON | 
-                    BS_NOTIFY | WS_TABSTOP,19,57,31,10
-    DEFPUSHBUTTON   "後方検索(&F)",IDC_SEARCH_FORWARD,79,29,50,14,WS_GROUP
-    PUSHBUTTON      "前方検索(&B)",IDC_SEARCH_BACKWARD,79,45,50,14
-    PUSHBUTTON      "閉じる",IDOK,138,29,50,14
-    PUSHBUTTON      "一括検索",IDC_GREP,79,62,109,14
+                    BS_NOTIFY | WS_TABSTOP,13,49,31,10
+    DEFPUSHBUTTON   "後方検索(&F)",IDC_SEARCH_FORWARD,70,29,50,14,WS_GROUP
+    PUSHBUTTON      "前方検索(&B)",IDC_SEARCH_BACKWARD,122,29,50,14
+    PUSHBUTTON      "閉じる(&C)",IDOK,174,29,50,14
+    PUSHBUTTON      "一括検索(&G)",IDC_GREP,70,50,154,14
 END
 
 IDD_CONFIG_MAIN DIALOG DISCARDABLE  0, 0, 259, 217
@@ -147,40 +154,40 @@ STYLE DS_MODALFRAME | DS_SETFOREGROUND | DS_CENTER | WS_POPUP | WS_CAPTION |
 CAPTION "BinViewer の設定"
 FONT 9, "ＭＳ Ｐゴシック"
 BEGIN
+    CONTROL         "Tab1",IDC_CONFIG_TAB,"SysTabControl32",WS_TABSTOP,7,7,
+                    245,186
     DEFPUSHBUTTON   "OK",IDOK,97,196,50,14
     PUSHBUTTON      "ｷｬﾝｾﾙ",IDCANCEL,149,196,50,14
     PUSHBUTTON      "適用",IDC_APPLY,202,196,50,14,WS_DISABLED
-    CONTROL         "Tab1",IDC_CONFIG_TAB,"SysTabControl32",WS_TABSTOP,7,7,
-                    245,186
 END
 
 IDD_CONFIG_FONT DIALOG DISCARDABLE  0, 0, 240, 165
 STYLE DS_CONTROL | WS_CHILD
 FONT 9, "ＭＳ Ｐゴシック"
 BEGIN
+    LTEXT           "フォント名(&N)：",IDC_STATIC,7,7,45,8
     COMBOBOX        IDC_CONFIG_FONT_NAME,7,18,112,141,CBS_DROPDOWNLIST | 
                     CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "フォントサイズ(&S)：",IDC_STATIC,7,35,55,8
     COMBOBOX        IDC_CONFIG_FONT_SIZE,63,33,56,141,CBS_DROPDOWN | 
                     CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "太字にする(&H)",IDC_CONFIG_FONT_BOLD,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,7,51,59,10
     CONTROL         "プロポーショナルフォントも表示(&P)",
                     IDC_CONFIG_SHOW_PROPFONT,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,7,67,112,10
+    GROUPBOX        "サンプル",IDC_SAMPLE_VIEW,7,83,113,75
+    LTEXT           "",IDC_CONFIG_FONT_SAMPLE,14,97,101,54
+    LTEXT           "フォント変更箇所(&C)：",IDC_STATIC,126,19,100,8
     LISTBOX         IDC_PART_LIST,126,31,101,65,LBS_SORT | 
                     LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "太字にする(&H)",IDC_CONFIG_FONT_BOLD,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,7,51,59,10
+    LTEXT           "フォントの色(&F)：",IDC_STATIC,126,113,51,8
     PUSHBUTTON      "",IDC_CONFIG_FONT_FGCOLOR,182,109,44,16,BS_BITMAP | 
                     BS_NOTIFY
+    LTEXT           "背景色(&B)：",IDC_STATIC,126,134,51,8
+    GROUPBOX        "フォントの個別設定",IDC_STATIC,122,7,111,151
     PUSHBUTTON      "",IDC_CONFIG_FONT_BKCOLOR,182,130,44,16,BS_BITMAP | 
                     BS_NOTIFY
-    GROUPBOX        "サンプル",IDC_SAMPLE_VIEW,7,83,113,75
-    GROUPBOX        "フォントの個別設定",IDC_STATIC,122,7,111,151
-    LTEXT           "フォントの色(&F)：",IDC_STATIC,126,113,51,8
-    LTEXT           "背景色(&B)：",IDC_STATIC,126,134,51,8
-    LTEXT           "フォント変更箇所(&C)：",IDC_STATIC,126,19,100,8
-    LTEXT           "フォント名(&N)：",IDC_STATIC,7,7,45,8
-    LTEXT           "フォントサイズ(&S)：",IDC_STATIC,7,35,55,8
-    LTEXT           "",IDC_CONFIG_FONT_SAMPLE,14,97,101,54
 END
 
 IDD_CONFIG_CURSOR DIALOG DISCARDABLE  0, 0, 240, 165
@@ -206,7 +213,7 @@ BEGIN
     CONTROL         109,IDC_STATIC,"Static",SS_BITMAP,141,29,73,85
 END
 
-IDD_SEARCH_MAIN DIALOG DISCARDABLE  0, 0, 210, 103
+IDD_SEARCH_MAIN DIALOG DISCARDABLE  0, 0, 247, 89
 STYLE DS_MODALFRAME | DS_SETFOREGROUND | DS_CENTER | WS_POPUP | WS_VISIBLE | 
     WS_CAPTION | WS_SYSMENU
 CAPTION "検索"
@@ -214,14 +221,14 @@ FONT 9, "ＭＳ Ｐゴシック"
 BEGIN
 END
 
-IDD_SEARCH_GREP DIALOGEX 0, 0, 195, 93
+IDD_SEARCH_GREP DIALOGEX 0, 0, 231, 93
 STYLE DS_CONTROL | WS_CHILD
 FONT 9, "ＭＳ Ｐゴシック"
 BEGIN
-    PUSHBUTTON      "ジャンプ",IDC_JUMP,138,7,50,14,BS_NOTIFY
+    PUSHBUTTON      "ジャンプ",IDC_JUMP,174,2,50,14,BS_NOTIFY
     CONTROL         "List1",IDC_SEARCH_GREP_RESULT,"SysListView32",
                     LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | 
-                    LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,7,7,129,79,
+                    LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,7,2,162,84,
                     WS_EX_CLIENTEDGE
 END
 
@@ -239,15 +246,15 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 180
         TOPMARGIN, 7
-        BOTTOMMARGIN, 64
+        BOTTOMMARGIN, 74
     END
 
     IDD_SEARCH, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 188
+        RIGHTMARGIN, 224
         TOPMARGIN, 7
-        BOTTOMMARGIN, 78
+        BOTTOMMARGIN, 65
     END
 
     IDD_CONFIG_MAIN, DIALOG
@@ -277,16 +284,16 @@ BEGIN
     IDD_SEARCH_MAIN, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 203
+        RIGHTMARGIN, 240
         TOPMARGIN, 7
-        BOTTOMMARGIN, 96
+        BOTTOMMARGIN, 82
     END
 
     IDD_SEARCH_GREP, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 188
-        TOPMARGIN, 7
+        RIGHTMARGIN, 224
+        TOPMARGIN, 2
         BOTTOMMARGIN, 86
     END
 END
